  sparse file datastructure during a merging operation you need to
  set --sparse-file-min-size to a valuer larger than all file sizes
  contained in the archive (for example 1E for one exabyte)
- bug fix: met when using compression and creating the archive to
  dar's standard output (ssh) and leading files to be corrupted in the
  archive and reported as such.

from 2.5.14-bis to 2.5.15
- fixing self report bug message met when trying to create an isolated
  catalogue into a directory that does not exist
- adding slice overwriting verification before creating a isolated
  catalogue, to be coherent with other operations creating an archive
  (backup and merging)
- storage size of compressed files was often wrongly stored in archive
  (shorter than reality), the only impact took place at archive listing
  time where the compression ratio displayed was better than reality
- fixed auto-detected bug condition triggered when -Tslicing is used
  with --sequential-read. Both options are not compatible and have been
  excluded by a nicer message than this auto-detection bug message.

from 2.5.14 to 2.5.14-bis
- avoiding using the syncfs() system call in dar_split when the
  platform does not support it (replacing it by sync() in that case
  for compilation to be successful)

from 2.5.13 to 2.5.14
- made libgcrypt built-in memory guard be initialized before obtaining
  ligcrypt version, to respect libgcrypt usage (but no problem was seen
  nor reported about this inconsistency)
- fixed syntax error in XML listing output (EA_entry and Attributes
  tags)
- fixed typos in dar man page
- Updating Tutorial for restoration
- fixed bugs in dar_split: cygwin support, filedescriptors were not
  explicitly closed at end of execution, allocating buffer on heap
  rather than in the stack for better size flexibility, avoiding buffer
  size to be greater than SSIZE_MAX.
- added -s option to dar_split in order to disable the by default SYNC